--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "commons_benatt"
+name = "commons-benatt"
 version = "0.0.1"
 authors = [
   { name="benatt", email="mathubenard@gmail.com" },
